my very first form

--- a/chandan.html
+++ b/chandan.html
@@ -23,6 +23,17 @@
    <br>
     <img width="300"  height=300 src="https://media.gettyimages.com/photos/bollywood-actor-salman-khan-at-a-promotional-event-of-his-upcoming-picture-id150247523?s=2048x2048" />
     <br>
+    <LABLE> ENTER YOUR MARKS</LABLE>
+    <INPUT TYPE= NUMBER>
+     <BR>
+          <LABLE>  ENTER YOUR FAV COLOR</LABLE>
+     <INPUT TYPE= COLOR>
+          <INPUT TYPE =FILE>
+               <BR>
+                    <LABLE> ENTER YOUR GENDER </LABLE>
+               <INPUT TYPE= RADIO  NAME =XX> MALE</INPUT>
+               <INPUT TYPE= RADIO NAME =XX>FEMALE </INPUT>
+               <INPUT TYPE= RADIO NAME=XX>OTHER</INPUT>
    
 </body>
 </html>
