--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
     <title>my first web form </title>
 </head>
 <body>
-    <h1>A student login form </h1>
+    <h1>A student login forms </h1>
     <form>
         <lable>Name</lable>
         <input type=text Placeholder="Enter your name here"></input><br>
