--- a/chandan.html
+++ b/chandan.html
@@ -9,6 +9,7 @@
 <h2 style="color:green">this is my first heading</h2>
 <h3 style="color:red">this is my first heading</h3>
 <h4>this is my first heading</h4>
+<h1>This is the biggest heading from Vscode</h1>
 <h5>this is my first heading</h5>
 <h6>this is my first heading</h6>
 <p>Programming is the <i>process</i> of <b>creating</b> a set of <U>instructions</U> that tell a <i>computer</i> how to perform a task. Programming can be done using a variety of computer programming languages, such as JavaScript, Python, and </p>
